--- a/OneDrive/바탕 화면/getmuscle-seongeon/app/Front/src/components/groups/GroupPage.css
+++ b/OneDrive/바탕 화면/getmuscle-seongeon/app/Front/src/components/groups/GroupPage.css
@@ -1,27 +1,41 @@
-.pageContainer {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
 .contentContainer {
+  position: relative;
   display: flex;
-  flex-direction: column;
+  flex-direction: column; /* pageTitle의 부모 요소에 설정 */
+  height: 10vh;
+  margin-bottom: 20px;
 }
 
 .pageTitle {
-  margin-bottom: 10px;
+  font-family: "Merriweather", sans-serif;
+  font-weight: bold;
+  position: absolute;
+  top: 60%; /* 페이지 중간에 위치 */
+  left: 50%; /* 페이지 중간에 위치 */
+  transform: translate(-50%, -50%); /* 정확히 중앙에 배치하기 위해 */
+  margin-bottom: 0;
 }
 
 .profileAndFeed {
   display: flex;
-  justify-content: space-between;
   width: 100%;
+  height: 100vh;
+  justify-content: space-between;
+  margin-top: 100px;
 }
+
 .profilePicLink {
-  order: 2;
+  position: absolute;
+  right: 0;
 }
 
 .feedlist {
-  order: 1;
+  position: absolute;
+  left: 0;
+}
+.postContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 20px; /* post들 사이의 여백 설정 */
+  margin-top: 70px; /* 상단 여백 추가 */
 }
