--- a/src/components/groups/MyProfile.css
+++ b/src/components/groups/MyProfile.css
@@ -1,8 +1,6 @@
-.myProfileContainer {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 20px;
+.pageContainer {
+  background-color: #FFFFFF;
+  position: relative;
 }
 
 .topBar {
@@ -17,7 +15,7 @@
   display: flex;
   align-items: center;
   position: relative;
-  top: 20px; /* Adjust this value to move the feedlist icon down */
+  top: 20px; /* 아이콘 위치 조정 */
   right: -20px;
 }
 
@@ -33,24 +31,49 @@
   text-align: center;
 }
 
-.profileInfo {
+.mainProfile {
   display: flex;
   align-items: center;
+  padding-top: 80px;
   margin-bottom: 20px;
 }
 
-.profileInfo img {
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  margin-right: 20px;
+#mainimage {
+  margin-left: 10px;
+  width: 80px;
+  height: 80px;
 }
 
+.profileText {
+  display: flex;
+  flex-direction: column;
+  margin-left: 20px;
+}
+
+#profilename {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 5px;
+  font-family: 'Urbanist', sans-serif;
+}
+
+#tag {
+  font-size: 16px;
+  color: #ff5151;
+  font-family: 'Urbanist', sans-serif;
+}
+
+#recommendtitle {
+  top: 0%;
+  left: 5%;
+}
+/*여기까지 프로필*/
 .profileCardsContainer,
 .friendCardContainer {
   display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
+  justify-content: left; 
+  /*flex-wrap: wrap; /* 여러 줄로 정렬 가능 */
+
 }
 
 .profileCardsContainer {
@@ -58,11 +81,11 @@
 }
 
 .profileCardsContainer > * {
-  flex: 0 1 calc(33.333% - 20px); /* 3열 레이아웃, 여백을 고려한 계산 */
+  flex: 0 1 calc(33.333% - 2px); /* 3열 레이아웃, 여백을 고려한 계산 */
 }
 
 .friendCardContainer > * {
-  flex: 0 1 calc(33.333% - 20px); /* 3열 레이아웃, 여백을 고려한 계산 */
+  flex: 0 1 calc(33.333% - 2px); /* 3열 레이아웃, 여백을 고려한 계산 */
 }
 
 .profileInfo,
@@ -70,5 +93,8 @@
 .friendCardContainer,
 h2 {
   position: relative;
-  top: 100px; /* Adjust this value to move these elements down */
+  top: 10px; /* Adjust this value to move these elements down */
+}
+#myfriendtitle{
+  left: 20px;
 }
