--- a/src/components/groups/MyProfile.css
+++ b/src/components/groups/MyProfile.css
@@ -1,3 +1,12 @@
+
+
+@font-face {
+  font-family: 'Merriweather';
+  src: url('../../assets/fonts/Merriweather-Bold.ttf');
+ 
+}
+
+
 .pageContainer {
   background-color: #FFFFFF;
   position: relative;
@@ -25,11 +34,14 @@
 }
 
 .pageTitle {
+  font-family: "Merriweather", sans-serif;
   font-size: 16px;
-  margin: 0;
-  flex-grow: 1; /* 중간에 위치하도록 설정 */
-  text-align: center;
+  position: absolute;
+  top:60px;
+  transform: translate(-50%, -50%); /* 정확히 중앙에 배치하기 위해 */
+  margin-bottom: 0;
 }
+
 
 .mainProfile {
   display: flex;
@@ -90,11 +102,8 @@
 
 .profileInfo,
 .profileCardsContainer,
-.friendCardContainer,
-h2 {
+.friendCardContainer
+{
   position: relative;
   top: 10px; /* Adjust this value to move these elements down */
-}
-#myfriendtitle{
-  left: 20px;
 }
